# misis2024f-24-17-Daurtsev-E-A

./: DOC_README.md  Makefile  README.md  alembic.ini  docker-compose.yml  example.env  pydantic_examples.ipynb  pyproject.toml
data/: d8c4bd80-c141-4615-88af-95f5fd146004.ecup-2-2.ipynb
file_storage_api/: config.py
file_storage_api/app/: main.py  security.py  utils.py
file_storage_api/app/file/: api.py  schemas.py  service.py
file_storage_api/app/user/: api.py  schemas.py  service.py
file_storage_api/db/: connection.py  initial.py  tables.py
file_storage_api/db/migrations/: env.py
file_storage_api/db/migrations/versions/: 217d871837ff_.py  3928d8b6feb1_add_hashed_password.py  4c7b742cfc91_add_cascade_deleting.py  591c8559169b_not_null_for_link_and_path.py  6567b953ab50_add_index_name_for_search.py  977287a6c525_not_null_for_link_and_path.py  a092e2b6febf_nicnkame_name.py  a632b48579c0_add_file_path.py  c58c87b84730_not_null_for_link_and_path.py  fb5fd3cb5d27_.py
file_storage_api/tests/: conftest.py  test_config.py  test_db_initial.py  test_utils.py
frontend/: files.html  index.html
